--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGL.loader.js";
+      var loaderUrl = buildUrl + "/GhostCleanerWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGL.data.br",
-        frameworkUrl: buildUrl + "/WebGL.framework.js.br",
-        codeUrl: buildUrl + "/WebGL.wasm.br",
+        dataUrl: buildUrl + "/GhostCleanerWebGL.data.br",
+        frameworkUrl: buildUrl + "/GhostCleanerWebGL.framework.js.br",
+        codeUrl: buildUrl + "/GhostCleanerWebGL.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "A-PxL2024",
         productName: "GhostCleaner",
