--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | GhostCleaner</title>
+    <title>Unity WebGL Player | GhostCleanerWebGL</title>
     <meta name="description" content="">
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
@@ -25,7 +25,7 @@
         <button id="entervr" value="Enter VR" disabled>VR</button>
         <button id="enterar" value="Enter AR" disabled>AR</button>
         <div id="unity-webxr-link">Using <a href="https://github.com/De-Panther/unity-webxr-export" target="_blank" title="WebXR Export">WebXR Export</a></div>
-        <div id="unity-build-title">GhostCleaner</div>
+        <div id="unity-build-title">GhostCleanerWebGL</div>
       </div>
     </div>
     <script>
@@ -37,7 +37,7 @@
         codeUrl: buildUrl + "/GhostCleanerWebGL.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "A-PxL2024",
-        productName: "GhostCleaner",
+        productName: "GhostCleanerWebGL",
         productVersion: "0.1.0",
       };
 
