--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/GhostCleanerWebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/GhostCleanerWebGL.data.gz",
-        frameworkUrl: buildUrl + "/GhostCleanerWebGL.framework.js.gz",
-        codeUrl: buildUrl + "/GhostCleanerWebGL.wasm.gz",
+        dataUrl: buildUrl + "/GhostCleanerWebGL.data",
+        frameworkUrl: buildUrl + "/GhostCleanerWebGL.framework.js",
+        codeUrl: buildUrl + "/GhostCleanerWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "A-PxL2024",
         productName: "GhostCleanerWebGL",
